# LearningHaskell

ProgrammingHaskell/: .project
ProgrammingHaskell/.dist-buildwrapper/: ProgrammingHaskell.cabal
ProgrammingHaskell/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  .Wc.hs.bwinfo  .Wc.hs.bwusage
ProgrammingHaskell/.dist-buildwrapper/src/ch03/: .Add.hs.bwinfo  .Add.hs.bwusage  Add.hs
ProgrammingHaskell/src/ch03/: Add.hs  AlgebraicVector.hs  BadPattern.hs  BookStore.hs  Exercise1.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  LastButOne.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MyDrop.hs  MySecond.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  Tuple.hs
ProgrammingHaskell/src/ch04/: .gitignore  EfficientList.hs  Filter.hs  FixLines  FixLines.hs  Fold.hs  IntParse.hs  InteractWith  InteractWith.hs  ListExercise1.hs  ListExercise2.hs  ListExercise3.hs  ListExercise4.hs  LoopExercise1.hs  LoopExercise10.hs  LoopExercise4.hs  LoopExercise6.hs  LoopExercise7.hs  LoopExercise9.hs  Map.hs  Partial.hs  Plus.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  hello-out.txt  test4
ProgrammingHaskell/src/ch05/: PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  Trouble.hs
