name:           ProgrammingHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         brandonshimanek

executable ProgrammingHaskell
  hs-source-dirs:  
                   src, 
                   src/ch03
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

